# Z-RWA-Monorepo

./: .gitignore  100xdevs.md  APPLICATION_PITCH.txt  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION.md  GRANT_PITCH.md  LICENSE  LITEPAPER.md  Makefile  PITCH_DECK.md  PRIVACY.md  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  SUBMISSION_ADEVAR.md  SUBMISSION_DODO.md  SUBMISSION_EITHERWAY.md  SUBMISSION_MAGICBLOCK.md  SUBMISSION_RPC_FAST.md  SUBMISSION_ZERION.md  SUBMISSION_ZK_RWA.md  TRUST_MODEL.md  audit.md  evm.md  flow.md  package-lock.json  package.json  walkthrough.md
Z-RWA/: Anchor.toml  CODEBASE_SUMMARY.md  Cargo.toml  README.md  package-lock.json  package.json
Z-RWA/docs/: scripts-guide.md
Z-RWA/keypairs/: admin.json
Z-RWA/keys/: fund_contract_dev-keypair.json  fund_contract_uat-keypair.json  token_program_dev-keypair.json  token_program_dev_2-keypair.json  token_program_uat-keypair.json
Z-RWA/programs/base-token-program/: Cargo.toml
Z-RWA/programs/base-token-program/src/: constants.rs  enums.rs  errors.rs  events.rs  lib.rs  structs.rs
Z-RWA/programs/compliance-vault/: Cargo.toml
Z-RWA/programs/compliance-vault/src/: lib.rs
Z-RWA/programs/fund-contract/: Cargo.toml  my-program-keypair.json
Z-RWA/programs/fund-contract/src/: enums.rs  errors.rs  events.rs  lib.rs  structs.rs
Z-RWA/programs/interop-core/: Cargo.toml
Z-RWA/programs/interop-core/src/: constants.rs  enums.rs  events.rs  lib.rs  structs.rs
Z-RWA/programs/interop-multisig/: Cargo.toml
Z-RWA/programs/interop-multisig/src/: constants.rs  enums.rs  errors.rs  events.rs  lib.rs  structs.rs
Z-RWA/programs/token-program/: Cargo.toml
Z-RWA/programs/token-program/src/: constants.rs  errors.rs  events.rs  lib.rs  structs.rs
Z-RWA/programs/treasury-bond/: Cargo.toml
Z-RWA/programs/treasury-bond/src/: constants.rs  enums.rs  events.rs  lib.rs  structs.rs
Z-RWA/programs/z-rwa/: Cargo.toml
Z-RWA/programs/z-rwa/src/: lib.rs
Z-RWA/programs/z_rwa_verifier/: Cargo.toml  z_rwa_verifier-keypair.json
Z-RWA/programs/z_rwa_verifier/src/: lib.rs
Z-RWA/scripts/: base-token-program.ts  constant.ts  full-flow.ts  fund-contract.ts  index.ts  interop-core.ts  interop-multisig.ts  solanaService.ts  token-program.ts  treasury-bond.ts
Z-RWA/tests/: full-flow.ts  test-1.ts  test-2.ts  treasury-bond.ts  zk_mint.ts
ZK-RAG/: .gitignore  Cargo.toml  README.md  extract_vkey.rs  invalid_proof.json  package.json  setup_models.sh  technical_architecture.md  test.txt  usage_guide.md  valid_proof.json  vkey_hash.txt
ZK-RAG/crates/circuits/: Cargo.toml
ZK-RAG/crates/circuits/elf/: riscv32im-succinct-zkvm-elf
ZK-RAG/crates/circuits/src/: main.rs
ZK-RAG/crates/core/: Cargo.toml
ZK-RAG/crates/core/src/: lib.rs  math.rs  verifier.rs
ZK-RAG/crates/ingestion/: Cargo.toml
ZK-RAG/crates/ingestion/src/: db.rs  embedder.rs  main.rs  parser.rs
ZK-RAG/crates/mantra-contract/: Cargo.toml
ZK-RAG/crates/mantra-contract/src/: contract.rs  error.rs  msg.rs  state.rs
ZK-RAG/crates/mantra-contract/tests/: integration.rs
ZK-RAG/crates/mantra-script/: Cargo.toml
ZK-RAG/crates/mantra-script/src/: mantra.rs
ZK-RAG/private-context/: .cursorrules  Cargo.toml  example.txt
ZK-RAG/private-context/crates/circuit/: Cargo.toml
ZK-RAG/private-context/crates/core/: Cargo.toml
ZK-RAG/private-context/crates/ingestion/: Cargo.toml
ZK-RAG/scripts/: setup_mantra.sh
provenancesto/contracts/custom-marker/: CHANGELOG.md  Cargo.toml  Makefile  README.md
provenancesto/contracts/custom-marker/parameters/: addAgent.json  addCountryCode.json  addIssuer.json  addSubAdmin.json  addToPartialFreeze.json  addTokenizationAgent.json  createMarker.json  deliveryVsPayment.json  freeze.json  getAdmin.json  getBalance.json  getByDenom.json  getCirculatingSupply.json  getDenomConfig.json  getFreezedAccounts.json  getFrozenBalance.json  getFrozenTokens.json  grantAccess.json  grantAccessToAgent.json  mint.json  mintTo.json  removeCountryCode.json  removeTokenizationAgent.json  send.json  setWhitelist.json  updateTokenLimit.json
provenancesto/contracts/custom-marker/schema/: custom-marker.json
provenancesto/contracts/custom-marker/src/: error.rs  helper.rs  lib.rs  msg.rs  state.rs  structs.rs  tests.rs  types.rs
provenancesto/contracts/cw20-marker/: CHANGES.md  Cargo.toml  Makefile  README.md
provenancesto/contracts/cw20-marker/parameters/: addAgent.json  addToPartialFreeze.json  addTransferAgent.json  approveBurn.json  approveMint.json  burn.json  burnFrom.json  burnFromRequest.json  burnRequest.json  createMarker.json  forceTransfer.json  freeze.json  getBalance.json  getBurnRequestAllowances.json  getBurnRequestBalanceOf.json  getBurnRequestOf.json  getCirculatingSupply.json  getDenomConfig.json  getFreezedAccounts.json  getFrozenBalance.json  getFrozenTokens.json  getHoldPeriod.json  getIbcResponseRequired.json  getMintRequestOf.json  inreaseBurnRequestAllowance.json  inreaseMintRequestAllowance.json  mint.json  mintFromRequest.json  mintRequest.json  mintTo.json  rejectBurn.json  rejectMint.json  removeAgent.json  removeFromPartialFreeze.json  removeSigners.json  send.json  setIbcResponse.json  transfer.json  unfreeze.json  userGrantAccess.json
provenancesto/contracts/cw20-marker/schema/: cw20-marker.json
provenancesto/contracts/cw20-marker/src/: enums.rs  error.rs  helper.rs  ibc.rs  lib.rs  msg.rs  state.rs  structs.rs  tests.rs  types.rs
provenancesto/contracts/factory/: Cargo.toml  Makefile  README.md
provenancesto/contracts/factory/parameters/: addBurnRequest.json  addMintRequest.json  addSigners.json  approveBurnRequest.json  approveMintRequest.json  burn.json  burnFrom.json  cancel.json  cancelApproveBurnRequest.json  cancelApproveMintRequest.json  cancelBurnRequest.json  cancelMintRequest.json  createMarker.json  send.json  (+18 more)
provenancesto/contracts/fund/: Cargo.toml  Makefile  README.md
provenancesto/contracts/interop-core/: Cargo.toml  Makefile  README.md
provenancesto/contracts/price-feed/: Cargo.toml  Makefile  README.md
provenancesto/contracts/treasury-bond/: Cargo.toml  Makefile  README.md
(+1633 files in other folders)
