[workspace]
members = [
    "programs/z-rwa"
]
exclude = [
    "programs/base-token-program",
    "programs/fund-contract",
    "programs/interop-core",
    "programs/interop-multisig",
    "programs/token-program",
    "programs/treasury-bond"
]
resolver = "2"



[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1


