[package]
name = "base-token-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "base_token_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1" }
sp1-solana = { git = "https://github.com/succinctlabs/sp1-solana.git", branch = "yuwen/add-3.0.0" }
spl-transfer-hook-interface = "0.6.3"
spl-tlv-account-resolution = "0.6.3"
spl-pod = "0.2.2"