[package]
name = "interop-multisig"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "interop_multisig"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1" }
interop-core = { path = "../interop-core", features = ["cpi"]  }
ethabi = { version = "18.0.0", default-features = false, features = [] }
hex = "0.4.3"
