[package]
name = "z-rwa"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "z_rwa"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1" }
sp1-solana = { git = "https://github.com/succinctlabs/sp1-solana.git", branch = "yuwen/add-3.0.0" }
blake3 = "=1.8.2"
toml_datetime = "=0.6.11"

