[package]
name = "private-context-ingestion"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "private-context"
path = "src/main.rs"

[dependencies]
private-context-core = { path = "../core" }
candle-core = "0.8.2"
candle-nn = "0.8.2"
candle-transformers = "0.8.2"
tokenizers = "0.15.0"
serde_json = "1.0"
fs-err = "2.11"
hnsw_rs = "0.3.3"
sled = "0.34"
bincode = "1.3"
async-trait = "0.1"
futures = "0.3"
arrow-array.workspace = true
arrow-schema.workspace = true
reclaim-rust-sdk = "0.1.0"
sp1-sdk = "3.0.0"
text-splitter = { version = "0.28.0", features = ["markdown", "tokenizers"] }
clap = { version = "4.4", features = ["derive"] }
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
sha2 = "0.10"
