[package]
name = "mantra-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = { version = "1.5.0", features = ["stargate"] }
cosmwasm-schema = "1.5.0"
cw-storage-plus = "1.2.0"
cw2 = "1.1.2"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
cosmwasm-crypto = "1.5.0"
schemars = "0.8"

[dev-dependencies]
cw-multi-test = "0.20.0"
serde_json = "1.0"
