[package]
name = "mantra-script"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mantra"
path = "src/mantra.rs"

[dependencies]
sp1-sdk = "3.0.0" # Assuming recent version
cosmwasm-std = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
base64 = "0.21"
tokio = { version = "1", features = ["full"] }
