
[package]
name = "custom-marker"
version = "1.0.0"
authors = [""]
edition = "2018"

exclude = [
  "custom_marker.wasm",
  "checksums.txt",
]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = []
# use library feature to disable all instantiate/execute/query exports
library = []
enable-tests = []

[dependencies]
cosmwasm-schema = { version = "1.5.11" }
cosmwasm-std = { version = "1.5.11" }
cosmwasm-storage = "1.5.2"
cw-storage-plus = "1.2.0"
provwasm-std = "1.2.0"
schemars = "0.8.22"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }
cw20 = "1.1.2"
bincode = "1.3.3"
ed25519-zebra = { version = "4.1.0", default-features = false, features = ["alloc"] }
getrandom = { version = "0.2", features = ["js"], default-features = false }

[dev-dependencies]
provwasm-mocks = "1.2.0"
prost = {version = "0.11.0", default-features = false}
