[package]
name = "cw20-marker"
version = "1.0.0"
authors = ["Tarun Jaiswal <tarunjais5@vibhathi.com>"]
edition = "2021"

exclude = [
  "cw20_marker.wasm",
  "checksums.txt",
]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = []
# use library feature to disable all instantiate/execute/query exports
library = []
default = []

[dependencies]
cosmwasm-schema = { version = "1.5.11" }
cosmwasm-std = { version = "1.5.11", features = ["cosmwasm_1_1"] }
cw-storage-plus = "1.2.0"
provwasm-std = "1.2.0"
schemars = "0.8.22"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }
bincode = "1.3.3"
# prost = {version = "0.11.0", default-features = false, features = ["prost-derive"]}
cw-utils = "1.0.1"
ethabi = { version = "18.0.0", default-features = false, features = [] }
osmosis-std-derive = "=0.15.2"
osmosis-std = "=0.15.2"
serde-json-wasm = "0.5.1"
ed25519-zebra = { version = "4.1.0", default-features = false, features = ["alloc"] }
getrandom = { version = "0.2", features = ["js"], default-features = false }
prost = {version = "0.11.0", default-features = false, features = ["prost-derive"]}

[dev-dependencies]
provwasm-mocks = "1.2.0"


 
# [target.'cfg(target_arch = "wasm32")'.dependencies]
# ed25519-zebra = { version = "4.1.0", default-features = false, features = ["alloc"] }
# prost = {version = "0.11.0", default-features = false, features = ["prost-derive"]}
