[package]
name = "fund"
version = "1.0.0"
authors = [
    "Abhishek Chauhan <abhishek.chauhan@antiersolutions.com>", 
    "Tarun Jaiswal <tarunjais5@vibhathi.com>"
]
edition = "2021"

exclude = [
  "fund.wasm",
  "checksums.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = []
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
custom-marker = { path = "../custom-marker/", features = ["library"] }
price-feed = { path = "../price-feed/", features = ["library"] }
cosmwasm-schema = { version = "1.5.11" }
cosmwasm-std = "1.5.11"
cosmwasm-storage = "1.5.2"
cw-storage-plus = "1.0.1"
schemars = "0.8.22"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }
cw20 = "1.1.2"
bincode = "1.3.3"
ed25519-zebra = { version = "3.1.0" }

[dev-dependencies]
provwasm-mocks = "1.2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
ed25519-zebra = { version = "4.1.0", features = ["alloc"] }
