[package]
name = "treasury-contract"
version = "1.0.0"
authors = ["Tarun Jaiswal <tarunjais5@vibhathi.com>"]
edition = "2021"

exclude = [
  "treasury_contract.wasm",
  "checksums.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = []
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { version = "1.5.11" }
cosmwasm-std = "1.5.11"
cosmwasm-storage = "1.5.2"
cw-storage-plus = "1.0.1"
thiserror = { version = "1.0.20" }
cw20 = "1.0.1"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
bincode = "1.3.3"
schemars = "0.8.22"

[dev-dependencies]
provwasm-mocks = "1.2.0"



[target.'cfg(target_arch = "wasm32")'.dependencies]

ed25519-zebra = { version = "4.1.0", features = ["alloc"] }