[package]
name = "cw20-marker"
version = "1.0.0"
authors = ["Tarun Jaiswal <tarunjais5@vibhathi.com>"]
edition = "2021"

exclude = [
  "cw20_marker.wasm",
  "checksums.txt",
]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = []
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { version = "1.1.9" }
cosmwasm-std = { version = "1.2.7", features = ["cosmwasm_1_1"] }
cosmwasm-storage = "1.2.4"
cw-storage-plus = "1.0.1"
provwasm-std = "2.0.0"
schemars = "0.8.1"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }
cw20 = "1.0.1"
bincode = "1.3.3"
cw-utils = "1.0.1"
prost = {version = "0.11.9", default-features = false, features = ["prost-derive"]}
serde-json-wasm = "1.0.0"
ethabi = { version = "18.0.0", default-features = false, features = [] }
provwasm-proc-macro = "0.1.0"

[dev-dependencies]
provwasm-mocks = "2.0.0"
